tests/snapshots/runtime_error_fixtures/either_boundary_string_into_either.snap
---
source: tests/error_fixtures/runtime_error_fixtures_snapshots.rs
---
Fixture: examples/runtime_errors/either_boundary_string_into_either.flx
== vm ==
status: 1
stdout:
<empty>
stderr:
[ 1 of 13] Compiling  Assert
[ 2 of 13] Compiling  Debug
[ 3 of 13] Compiling  Array
[ 4 of 13] Compiling  List
[ 5 of 13] Compiling  Either
[ 6 of 13] Compiling  IO
[ 7 of 13] Compiling  Math
[ 8 of 13] Compiling  Numeric
[ 9 of 13] Compiling  Option
[10 of 13] Compiling  Primops
[11 of 13] Compiling  String
[12 of 13] Compiling  BoundaryUnknown
• 1 error, 1 warning • examples/runtime_errors/either_boundary_string_into_either.flx
Warning: Redundant Match Arm

this arm is unreachable — earlier arms already cover it

  examples/runtime_errors/either_boundary_string_into_either.flx:7:9
  |
7 |         _ -> 0
  |         ^^^^^^


error[E300]: Argument Type Mismatch

I found the wrong type in the 1st argument to `unwrap_or_zero`.

  examples/runtime_errors/either_boundary_string_into_either.flx:12:16
   |
 3 | fn unwrap_or_zero(input: Either<String, Int>) -> Int {
   | ---------------------------------------------------- `unwrap_or_zero` expects `Either<String, Int>` as the 1st parameter
 4 |     match input {
 5 |         Left(_msg) -> 0,
... |
10 |
11 | let dynamic = RuntimeErrors.BoundaryUnknown.dynamic_string()
12 | unwrap_or_zero(dynamic)
   |                ^^^^^^^
   |                ------- this argument has type `String`

Note:
  expected argument type: Either<String, Int>
  found argument type: String
  the actual argument type is inferred from this expression
  the expected argument type comes from the function signature

Help:
  Pass a `Either<String, Int>` value as the 1st argument.

Found 1 error and 1 warning.
